# fernspielapparat

./: .gitignore  AUTHORS.md  COMPILE.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  deploy.sh
.cargo/: config
doc/: Introduction.md  fernspielctl_Spec.md  phonebook_Spec.md
examples/: phonebook.yaml
fernspielapparat/: ATTRIBUTIONS.md  AUTHORS.md  COMPILE.md  Cargo.toml  README.md  build.rs  build.sh  deploy.sh
fernspielapparat/.cargo/: config
fernspielapparat/resources/: default.yaml  demo.yaml
fernspielapparat/scripts/: fernspielapparat.service  setup_toolchain_rp2.sh
fernspielapparat/src/: check.rs  err.rs  lib.rs  log.rs  main.rs  phone.rs  testutil.rs  version.rs
fernspielapparat/src/act/: act.rs  actuators.rs  bell.rs  mod.rs  ring.rs  speech.rs  wait.rs
fernspielapparat/src/acts/: act.rs  actuators.rs  mod.rs  ring.rs  sound.rs  speech.rs  wait.rs
fernspielapparat/src/acts/sound/: mod.rs  play.rs  sound.rs  spec.rs
fernspielapparat/src/acts/sounds/: ctx.rs  ensemble.rs  mod.rs  play.rs  sound.rs  spec.rs
fernspielapparat/src/app/: builder.rs  mod.rs  run.rs
fernspielapparat/src/book/: book.rs  compile.rs  mod.rs
fernspielapparat/src/books/: book.rs  compile.rs  mod.rs  spec.rs
fernspielapparat/src/dial/: input.rs  stdin.rs
fernspielapparat/src/evt/: composite.rs  mod.rs
fernspielapparat/src/sense/: bg.rs  err.rs  mod.rs  sense.rs  sensors.rs
fernspielapparat/src/sense/dial/: hardware.rs  input.rs  mod.rs  stdin.rs
fernspielapparat/src/senses/: bg.rs  sense.rs  sensors.rs
fernspielapparat/src/senses/dial/: hardware.rs
fernspielapparat/src/serve/: cause.rs  decoder.rs  handle.rs  mod.rs  relay.rs  req.rs  server.rs  ws.rs
fernspielapparat/src/state/: machine.rs  mod.rs  state.rs
fernspielapparat/src/states/: machine.rs  mod.rs  state.rs
fernspielapparat/src/util/: mod.rs  time.rs
fernspielapparat/test/: fernspielctl_test.html  fernspielctl_test.js  testbook_full.yaml  testbook_generated.yaml  testbook_only_states.yaml
fernspielapparat/tests/: remote_control.rs
scripts/: fernspielapparat.service
src/: lib.rs  log.rs  main.rs
src/acts/: act.rs  actuators.rs  ring.rs  wait.rs
src/app/: builder.rs  mod.rs  run.rs
test/: fernspielctl_test.html  fernspielctl_test.js  testbook_full.yaml  testbook_only_states.yaml  tv.yaml
tests/: remote_control.rs
(+20 files in other folders)
