[package]
name = "fernspielapparat"
version = "0.1.0"
authors = ["krachzack <hello@phstadler.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
base64 = "0.10.1"
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = { version = "3.1", features = ["termination"] }
cute-log = "1.1"
derivative = "1.0.2"
failure = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tavla = { git = "https://github.com/krachzack/tavla.git" }
tempfile = "3.0.7"
vlc-rs = "0.3.0"

[dependencies.websocket]
version = "0.23.0"
default-features = false
features = ["sync"]

[features]
# Long-running tests are compiled to be ignored unless this flag is set.
# Run with `cargo test --ignored` to run the long-running tests in a normal build.
# Uncomment the next line to include them in all test runs:
# default = [ "expensive_tests" ]
expensive_tests = []

[target.'cfg(target_os = "linux")'.dependencies]
i2c-linux = "0.1"

[dev-dependencies]
env_logger = "0.6.2"
rand = "0.7.0"
