[package]
name = "fernspielapparat"
version = "0.1.0"
authors = ["krachzack <hello@phstadler.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }
crossbeam-channel = "0.3"
tavla = { git = "https://github.com/krachzack/tavla.git" }
i2c-linux = "0.1"
clap = "2.32"
log = "0.4"
cute-log = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
derivative = "1.0.2"
tempfile = "3.0.7"
vlc-rs = "0.3.0"
base64 = "0.10.1"

[dev-dependencies]
env_logger = "0.6.2"